
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int HANDLE ;


 int CloseHandle (int) ;
 int ConnectNamedPipe (int,int *) ;
 int CreateNamedPipe (int ,int,int ,int,int,int,int,int *) ;
 int GetLastError () ;
 int INVALID_HANDLE_VALUE ;
 scalar_t__ ImpersonateNamedPipeClient (int) ;
 int PIPE_ACCESS_INBOUND ;
 int PIPE_ACCESS_OUTBOUND ;
 int PIPE_WAIT ;
 scalar_t__ TRUE ;
 int pipename ;
 int printf (char*,...) ;

int main(void) {

    while (TRUE){

        HANDLE pipe = CreateNamedPipe(pipename, PIPE_ACCESS_INBOUND | PIPE_ACCESS_OUTBOUND , PIPE_WAIT, 1, 1024, 1024, 120 * 1000, ((void*)0));

        if (pipe == INVALID_HANDLE_VALUE){

           printf("Error: %d", GetLastError());

        }else{

        printf("%s","pipe created\n");

        printf("%x",pipe);

        }

        ConnectNamedPipe(pipe, ((void*)0));

         if(ImpersonateNamedPipeClient(pipe)){

          printf("ok!");

        }else{

        printf("%s%d","WTF",GetLastError());

        }

        CloseHandle(pipe);

    }

  return 0;

}
